--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Baca Al-Qur'an dengan terjemahan Bahasa Indonesia"
     />
     <link
       rel="apple-touch-icon"
