--- a/public/index.html
+++ b/public/index.html
@@ -46,4 +46,27 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.5.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.5.0/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyBDAv9h66jn8VcvTdn-dOLiJNE3aALDeEg",
+      authDomain: "quran-web-2282b.firebaseapp.com",
+      projectId: "quran-web-2282b",
+      storageBucket: "quran-web-2282b.appspot.com",
+      messagingSenderId: "241087087940",
+      appId: "1:241087087940:web:4c8b5ece362eceb2964311",
+      measurementId: "G-GCZK5CK4GD",
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
 </html>
