--- a/public/index.html
+++ b/public/index.html
@@ -65,35 +65,17 @@
       measurementId: "G-GCZK5CK4GD",
     };
 
+    // if (
+    //   window.location.host === "mydomain.com" ||
+    //   window.location.host === "www.mydomain.com"
+    // ) {
+    //   if (document.cookie.indexOf("COOKIENAME=COOKIEVALUE") === -1) {
+    //     // Insert Analytics Code Here
+    //   }
+    // }
+
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const analytics = getAnalytics(app);
   </script>
-  <footer class="footer bg-white relative pt-1 border-b-2 border-blue-700">
-    <div class="container mx-auto px-6">
-      <div class="mt-16 border-t-2 border-gray-300 flex flex-col items-center">
-        <div class="sm:w-2/3 text-center py-6">
-          <p class="text-sm text-gray-500 font-bold mb-2">
-            ©
-            <script>
-              document.write(/\d{4}/.exec(Date())[0]);
-            </script>
-            Al-Quran Indonesia Made by
-            <a class="text-blue-300" href="https://darul.id" target="_blank"
-              >Darul.Id</a
-            >
-          </p>
-          <p class="text-sm text-gray-500 font-bold mb-2">
-            Api Quran by
-            <a
-              class="text-blue-300"
-              href="https://equran.id/apidev"
-              target="_blank"
-              >Equran.Id</a
-            >
-          </p>
-        </div>
-      </div>
-    </div>
-  </footer>
 </html>
