--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="id">
   <head>
     <meta charset="utf-8" />
     <link
@@ -7,11 +7,22 @@
       href="https://cdn-icons-png.flaticon.com/512/2230/2230267.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#059669" />
     <meta
       name="description"
-      content="Baca Al-Qur'an dengan terjemahan Bahasa Indonesia"
+      content="Baca Al-Qur'an Online Lengkap 30 Juz dengan terjemahan Bahasa Indonesia dan audio resmi yang jernih. Akses mudah, cepat, dan gratis."
     />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Al-Qur'an Indonesia Online" />
+    <meta
+      property="og:description"
+      content="Baca Al-Qur'an Online Lengkap 30 Juz dengan terjemahan Bahasa Indonesia dan audio resmi."
+    />
+    <meta
+      property="og:image"
+      content="https://cdn-icons-png.flaticon.com/512/2230/2230267.png"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
     <link
       rel="apple-touch-icon"
       href="https://cdn-icons-png.flaticon.com/512/2230/2230267.png"
