--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,19 @@
     />
     <!-- End Google Fonts -->
     <title>Al-Qur'an Indonesia</title>
+    <script>
+      // Blocking script to prevent theme flicker
+      (function () {
+        try {
+          var theme = localStorage.getItem("theme");
+          var supportDarkMode =
+            window.matchMedia("(prefers-color-scheme: dark)").matches === true;
+          if (theme === "dark" || (!theme && supportDarkMode)) {
+            document.documentElement.classList.add("dark");
+          }
+        } catch (e) {}
+      })();
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
