--- a/public/index.html
+++ b/public/index.html
@@ -88,13 +88,13 @@
     // Your web app's Firebase configuration
     // For Firebase JS SDK v7.20.0 and later, measurementId is optional
     const firebaseConfig = {
-      apiKey: "AIzaSyBDAv9h66jn8VcvTdn-dOLiJNE3aALDeEg",
-      authDomain: "quran-web-2282b.firebaseapp.com",
-      projectId: "quran-web-2282b",
-      storageBucket: "quran-web-2282b.appspot.com",
-      messagingSenderId: "241087087940",
-      appId: "1:241087087940:web:4c8b5ece362eceb2964311",
-      measurementId: "G-GCZK5CK4GD",
+      apiKey: "%REACT_APP_FIREBASE_API_KEY%",
+      authDomain: "%REACT_APP_FIREBASE_AUTH_DOMAIN%",
+      projectId: "%REACT_APP_FIREBASE_PROJECT_ID%",
+      storageBucket: "%REACT_APP_FIREBASE_STORAGE_BUCKET%",
+      messagingSenderId: "%REACT_APP_FIREBASE_MESSAGING_SENDER_ID%",
+      appId: "%REACT_APP_FIREBASE_APP_ID%",
+      measurementId: "%REACT_APP_FIREBASE_MEASUREMENT_ID%",
     };
 
     // Initialize Firebase
