--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,7 @@
 <html lang="id">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="icon"
-      href="https://cdn-icons-png.flaticon.com/512/2230/2230267.png"
-    />
+    <link rel="icon" href="%PUBLIC_URL%/icon-quran.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#059669" />
     <meta
@@ -18,15 +15,9 @@
       property="og:description"
       content="Baca Al-Qur'an Online Lengkap 30 Juz dengan terjemahan Bahasa Indonesia dan audio resmi."
     />
-    <meta
-      property="og:image"
-      content="https://cdn-icons-png.flaticon.com/512/2230/2230267.png"
-    />
+    <meta property="og:image" content="https://quran.darul.id/icon-quran.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <link
-      rel="apple-touch-icon"
-      href="https://cdn-icons-png.flaticon.com/512/2230/2230267.png"
-    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon-quran.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
